# url_shortener

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
config/: settings.py  urls.py
shortener/: models.py  urls.py  views.py
shortener/forms/: shortener_form.py
shortener/migrations/: 0001_initial.py  0002_alter_shortenedurl_short_url.py  0003_remove_shortenedurl_short_url_and_more.py  0004_shortenedurl_published.py  0005_alter_shortenedurl_short_code.py
shortener/templatetags/: svg_icon.py
shortener/utils/: shortener.py
src/scripts/: app.js  fontawesome.js  info.js  shortener.js
templates/layouts/: base.html
templates/shortener/: _info_area.html  _message.html  _short_url.html  index.html
