[tool.poetry]
name = "5xurl"
version = "0.1.0"
description = ""
authors = ["chen weichen <newsforcwc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
